# proterlang

./: .gitignore  CMakeLists.txt
cmake/: Erlang.cmake
compiler/src/: Makefile.am
compiler/src/google/protobuf/compiler/: main.cc
compiler/src/google/protobuf/compiler/erlang/: erlang_generator.cc  erlang_generator.h
protoc-gen-erlang/: CMakeLists.txt  erlang_generator.cc  erlang_generator.h  main.cc
src/: CMakeLists.txt  protobuf.erl  protobuf.hrl  protobuf_tests.erl  testmessages.proto
test/: CMakeLists.txt  maketestdata.py  protobuf_tests.erl  testmessages.proto
